feat(cmake): added monolithic build type

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -83,6 +83,15 @@ else()
     message(STATUS "VIT - Profiling is disabled")
 endif(VIT_ENABLE_PROFILING)
 
+option(VIT_COMPILE_MONOLITHIC "Compile the engine as a monolithic" OFF)
+if(VIT_COMPILE_MONOLITHIC)
+    set(VIT_LIBRARY_TYPE STATIC)
+    message(STATUS "VIT - Compiling as monolithic")
+else()
+    set(VIT_LIBRARY_TYPE SHARED)
+    message(STATUS "VIT - Compiling as modular")
+endif(VIT_COMPILE_MONOLITHIC)
+
 add_subdirectory(External/)
 add_subdirectory(Engine/)
 add_subdirectory(Editor/)
