--- a/cmake/BuildConfig.hxx.in
+++ b/cmake/BuildConfig.hxx.in
@@ -7,7 +7,7 @@
     #define VITRUVE_BUILD_TYPE "Unknown"
 #endif // !defined(VITRUVE_BUILD_TYPE)
 
-#cmakedefine01 VITRUVE_BUILD_MONOLITHIC
+#cmakedefine01 VIT_COMPILE_MONOLITHIC
 #cmakedefine01 VIT_NAN_CHECKS
 
 
