feat(Editor): changed how entypoints are managed, no more random extern C

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -154,6 +154,17 @@ function(vit_set_standard_options target precompile_header)
     target_precompile_headers(${target} PRIVATE ${GENERATED_HEADERS} ${precompile_header})
 endfunction(vit_set_standard_options)
 
+function(vit_add_platforms_entrypoint target)
+    if(WIN32)
+        target_sources(${target} PRIVATE Entrypoints/Windows/Main.cxx)
+        set_target_properties(${target} PROPERTIES WIN32_EXECUTABLE TRUE)
+    elseif(UNIX)
+        target_sources(${target} PRIVATE Entrypoints/Linux/Main.cxx)
+    else()
+        message(FATAL_ERROR "Platform not supported !")
+    endif()
+endfunction(vit_add_platforms_entrypoint)
+
 add_subdirectory(External/)
 add_subdirectory(Engine/)
 add_subdirectory(Editor/)
