--- a/RHI/Vulkan/External/CMakeLists.txt
+++ b/RHI/Vulkan/External/CMakeLists.txt
@@ -16,7 +16,7 @@ set(VMA_DYNAMIC_VULKAN_FUNCTIONS
     CACHE BOOL "" FORCE
 )
 set(VMA_PATH ${CMAKE_CURRENT_SOURCE_DIR}/VulkanMemoryAllocator)
-add_library(VulkanMemoryAllocator EXCLUDE_FROM_ALL STATIC ${VMA_PATH}/include/vk_mem_alloc.h)
+add_library(VulkanMemoryAllocator STATIC EXCLUDE_FROM_ALL ${VMA_PATH}/include/vk_mem_alloc.h)
 set_source_files_properties(${VMA_PATH}/include/vk_mem_alloc.h PROPERTIES LANGUAGE CXX)
 set_property(TARGET VulkanMemoryAllocator PROPERTY POSITION_INDEPENDENT_CODE ON)
 target_compile_definitions(
