--- a/Engine/CMakeLists.txt
+++ b/Engine/CMakeLists.txt
@@ -31,8 +31,7 @@ endif()
 generate_export_header(ENGINE)
 
 add_library(
-    ${PROJECT_NAME}
-    ${VIT_LIBRARY_TYPE}
+    ${PROJECT_NAME}_obj OBJECT
     src/Engine/Main.cxx
     src/Engine/Core/Log.cxx
     src/Engine/Core/UUID.cxx
@@ -70,9 +69,9 @@ add_library(
     ${PLATFORM_SOURCE_FILES}
     ${COMPILER_SOURCE_FILE}
 )
-vit_set_standard_options(${PROJECT_NAME} "${CMAKE_SOURCE_DIR}/Engine/src/Engine/Vitruve.hxx")
+vit_set_standard_options(${PROJECT_NAME}_obj "${CMAKE_SOURCE_DIR}/Engine/src/Engine/Vitruve.hxx")
 target_link_libraries(
-    ${PROJECT_NAME}
+    ${PROJECT_NAME}_obj
     PUBLIC cpplogger
            magic_enum
            glfw
@@ -80,15 +79,18 @@ target_link_libraries(
            ModernDialogs
 )
 
-target_include_directories(${PROJECT_NAME} PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/src/)
-target_compile_definitions(${PROJECT_NAME} PRIVATE $<$<CONFIG:Debug>:VIT_POISON_ALLOCATION>)
-target_compile_definitions(${PROJECT_NAME} PRIVATE ENGINE_EXPORTS)
+target_include_directories(${PROJECT_NAME}_obj PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/src/)
+target_compile_definitions(${PROJECT_NAME}_obj PRIVATE $<$<CONFIG:Debug>:VIT_POISON_ALLOCATION>)
+target_compile_definitions(${PROJECT_NAME}_obj PRIVATE ENGINE_EXPORTS)
 
 if(UNIX)
-    target_link_libraries(${PROJECT_NAME} PUBLIC xdgpp)
+    target_link_libraries(${PROJECT_NAME}_obj PUBLIC xdgpp)
 elseif(WIN32)
-    target_link_libraries(${PROJECT_NAME} PUBLIC dbghelp)
+    target_link_libraries(${PROJECT_NAME}_obj PUBLIC dbghelp)
 endif()
+
+add_library(${PROJECT_NAME} ${VIT_LIBRARY_TYPE})
+target_link_libraries(${PROJECT_NAME} PUBLIC ${PROJECT_NAME}_obj)
 
 # ------------- Tests -------------
 
@@ -115,4 +117,4 @@ target_precompile_headers(
     "${CMAKE_BINARY_DIR}/generated/ENGINE_API_Export.h"
     "src/Engine/Vitruve.hxx"
 )
-target_link_libraries(${PROJECT_NAME}_Test PRIVATE glm)
+target_link_libraries(${PROJECT_NAME}_Test PRIVATE glm ${PROJECT_NAME}_obj)
