fix(cmake): fix warning

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -61,13 +61,9 @@ else()
     message(STATUS "LTO not supported")
 endif()
 
-option(OPTIMIZE_FOR_NATIVE "Build with -march=native" OFF)
+option(OPTIMIZE_FOR_NATIVE "Build with -march=native (AVX2 by default)" OFF)
 if(OPTIMIZE_FOR_NATIVE)
     message(STATUS "Building with -march=native")
-    if(CMAKE_CXX_COMPILER_ID STREQUAL "MSVC")
-        message(WARNING "Native optimization is not supported for MSVC")
-        set(OPTIMIZE_FOR_NATIVE OFF)
-    endif()
 else()
     message(STATUS "Building without -march=native")
 endif()
@@ -164,7 +160,11 @@ function(vit_set_standard_options target precompile_header)
                 /wd5030> # unknown attribute
     )
     if(OPTIMIZE_FOR_NATIVE)
-        target_compile_options(${target} PUBLIC -march=native)
+        if (MSVC)
+            target_compile_options(${target} PUBLIC /arch:AVX2)
+        else()
+            target_compile_options(${target} PUBLIC -march=native)
+        endif()
     endif(OPTIMIZE_FOR_NATIVE)
     if(VIT_ENABLE_PROFILING)
         target_link_libraries(${target} PUBLIC Tracy::TracyClient)
