--- a/RHI/Vulkan/CMakeLists.txt
+++ b/RHI/Vulkan/CMakeLists.txt
@@ -15,13 +15,13 @@ file(
 
 generate_export_header(VULKAN_RHI)
 
-add_library(${PROJECT_NAME}_obj OBJECT ${VULKAN_RENDERER_FILES})
+add_library(${PROJECT_NAME} ${VIT_LIBRARY_TYPE} ${VULKAN_RENDERER_FILES})
 
-vit_set_standard_options(${PROJECT_NAME}_obj "VulkanRHI.pch.hxx")
-target_include_directories(${PROJECT_NAME}_obj PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/src)
-target_compile_definitions(${PROJECT_NAME}_obj PRIVATE VULKAN_RHI_EXPORTS)
+vit_set_standard_options(${PROJECT_NAME} "VulkanRHI.pch.hxx")
+target_include_directories(${PROJECT_NAME} PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/src)
+target_compile_definitions(${PROJECT_NAME} PRIVATE VULKAN_RHI_EXPORTS)
 target_link_libraries(
-    ${PROJECT_NAME}_obj
+    ${PROJECT_NAME}
     PRIVATE imgui
             spirv-cross-core
             shaderc
@@ -29,14 +29,12 @@ target_link_libraries(
             Vulkan::UtilityHeaders
             Vulkan::Headers
 )
-target_link_libraries(${PROJECT_NAME}_obj PUBLIC VitruveEngine)
-target_compile_definitions(${PROJECT_NAME}_obj PUBLIC IMGUI_IMPL_VULKAN_NO_PROTOTYPES=1)
+target_link_libraries(${PROJECT_NAME} PUBLIC VitruveEngine)
+target_compile_definitions(${PROJECT_NAME} PUBLIC IMGUI_IMPL_VULKAN_NO_PROTOTYPES=1)
 if(VIT_ENABLE_VULKAN_DEBUGGING)
-    target_compile_definitions(${PROJECT_NAME}_obj PUBLIC VULKAN_DEBUGGING_ENABLED=1)
+    target_compile_definitions(${PROJECT_NAME} PUBLIC VULKAN_DEBUGGING_ENABLED=1)
 endif()
 
-add_library(${PROJECT_NAME} ${VIT_LIBRARY_TYPE})
-target_link_libraries(${PROJECT_NAME} PRIVATE ${PROJECT_NAME}_obj)
 
 # ------------- Tests -------------
 
